--- a/dancefloor.html
+++ b/dancefloor.html
@@ -5,12 +5,22 @@
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <script src="lib/jquery.js"></script>
     <script src="src/dancer.js"></script>
-    <script src="src/blinkyDancer.js"></script>
+    <script src="src/makeSpongebob.js"></script>
+    <script src="src/cartwheelDancer.js"></script>
+    <script src="src/makeLGDancers.js"></script>
+    <script src="src/makeKenny.js"></script>
+    <script src="src/makeJake.js"></script>
   </head>
   <body>
     <div class="topbar">
       <span class="title">object dance party</span>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add a blinky dancer</a>    </div>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeLGDancers">Add lemongrabs</a> 
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeSpongebob">add a Spongebob</a> 
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeCartwheelDancer">add cartwheeling dancer</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeKenny">add Kenny</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeJake">add Jake</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="lineUp">add Jake</a>
+    </div>
     <script src="src/init.js"></script>
   </body>
 </html>
