Add jqueryui library and implement 'explode'

--- a/dancefloor.html
+++ b/dancefloor.html
@@ -10,6 +10,8 @@
     <script src="src/makeLGDancers.js"></script>
     <script src="src/makeKenny.js"></script>
     <script src="src/makeJake.js"></script>
+    <script src="http://code.jquery.com/jquery-1.10.2.js"></script>
+    <script src="http://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
   </head>
   <body>
     <div class="topbar">
