--- a/dancefloor.html
+++ b/dancefloor.html
@@ -10,6 +10,7 @@
     <script src="src/makeLGDancers.js"></script>
     <script src="src/makeKenny.js"></script>
     <script src="src/makeJake.js"></script>
+    <script src="src/makeLSP.js"></script>
     <script src="http://code.jquery.com/jquery-1.10.2.js"></script>
     <script src="http://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
   </head>
@@ -21,7 +22,8 @@
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeCartwheelDancer">add cartwheeling dancer</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeKenny">add Kenny</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeJake">add Jake</a>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="lineUp">add Jake</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeLSP">add LSP</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="lineUp">Line 'em up!</a>
     </div>
     <script src="src/init.js"></script>
   </body>
