--- a/dancefloor.html
+++ b/dancefloor.html
@@ -23,7 +23,7 @@
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeKenny">add Kenny</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeJake">add Jake</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeLSP">add LSP</a>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="lineUp">Line 'em up!</a>
+      <a href="#" id="lineUp">Line 'em up!</a>
     </div>
     <script src="src/init.js"></script>
   </body>
